@@ -41,6 +41,13 @@ output_files = %OUTPUT_DIR%/%SEED%.out
 cmd_generator =
 generator_cache = False
 
+# regex patterns used for extracting information (score, time & user-defined metadata) from output files
+# when analyzing output, every line is matched vs every pattern (you can add new patterns by adding options that start with "extraction_regex_")
+# in order to extract variables you need to define named catch group with the variable name
+# alternatively there are two special names: VARIABLE and VALUE that you can use for extracting both name and the value, so that you don't have to create a separate pattern for each value you want to add
+# the strings are imported as raw, so there's no need for double-escaped characters 
+extraction_regex_0 = ^\s*\[DATA\]\s+(?P<VARIABLE>[a-zA-Z]\w*)\s*=\s*(?P<VALUE>\S+)\s*$
+extraction_regex_1 = ^\s*Score\s*=\s*(?P<score>[-+]?\d*\.\d+|\d+)\s*$
 
 [default]
 # type of scoring: raw (sum of absolute scores), min (relative, lower = better), max (relative, higher = better)
