@@ -1,4 +1,5 @@
 [WIP]
+* --exec: patterns for extracting the score / metadata are converted to regex and are editable in the config files
 * --show: --noscale override to remove scaling from cmd line
 * --show: new option --var VARIABLE in order to show stats for VARIABLE instead of score
 * --show: additional "Missing" column for tests missing score (or a specified variable)
